--- a/Tree/100. Same Tree.md
+++ b/Tree/100. Same Tree.md
@@ -33,3 +33,25 @@ Time consuming : O(n) (every node access one time)
 
 Using queue to implement.
 
+```c++
+bool isSameTree(TreeNode* p, TreeNode* q) {
+        queue<TreeNode*> p1;
+        queue<TreeNode*> p2;
+        p1.push(p);
+        p2.push(q);
+        while(!p1.empty() && !p2.empty()) {
+            TreeNode *cur1 = p1.front();
+            TreeNode *cur2 = p2.front();
+            p1.pop(); p2.pop();
+            if(cur1 == NULL && cur2 == NULL) continue;
+            if(cur1 == NULL || cur2 == NULL) return false;
+            if(cur1->val != cur2->val) return false;
+            p1.push(cur1->left);
+            p1.push(cur1->right);
+            p2.push(cur2->left);
+            p2.push(cur2->right);
+        }
+        return true;
+    }
+```
+
